Adding additional functions and fixing add_year_and_decade

--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -150,6 +150,8 @@
     "# Apply the function to the date column\n",
     "data['date'] = data['date'].apply(pf.capitalize_month)\n",
     "\n",
+    "\n",
+    "    \n",
     "print(data.head())"
    ]
   },
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,14 +181,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 1 - Seasonality "
+    "## Section 1 - Comparison with a subset of data (used for testing)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using similar data from Met Éireann, [Murphy et al., 2023](https://www.sciencedirect.com/science/article/pii/S2212094723000610) break down the seasons into from the months below;\n",
+    "While a `pd.resample` could be used, this only has quarters and not true seasons. Using similar data from Met Éireann, [Murphy et al., 2023](https://www.sciencedirect.com/science/article/pii/S2212094723000610) break down the seasons into from the months below;\n",
     "- Winter: Dec, Jan, and Feb\n",
     "- Spring: Mar, Apr, and May\n",
     "- Summer: Jun, Jul, and Aug\n",
@@ -196,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -325,12 +327,192 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Section 2 - Seasonality "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding decades for plotting "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting the temperature by season over time (decades)\n",
+    "data = pf.add_year_and_decade(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section 3 - Power Analysis "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0' '9' '7' '4' '6' '8' '11' '12' '10' '5' '13' '14' '15' '18' '19' '17'\n",
+      " '16' '21' '24' '22' '26' '20' '23' '3' '2' '1' '25' '36' '38' '34' '37'\n",
+      " '29' '27' '28' '31' '30' '32' '33' '35' '41' '45' '49' '48' '43' '39'\n",
+      " '40' '44' '58' '63' '47' '59' '56' '42' '46' '51' '50' '53' '55' '52'\n",
+      " '54' '57' ' ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = data['wdsp'].unique()\n",
+    "print(a)\n",
+    "\n",
+    "# a = data['wdsp'].isnull().sum()\n",
+    "# print(a)\n",
+    "\n",
+    "# b = data['wdsp'].value_counts()\n",
+    "# print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = data['wdsp'].str.startswith(' ').sum()\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "data['wdsp'] = np.where(data['wdsp'].str.startswith(' '), np.nan, data['wdsp'])\n",
+    "d = data['wdsp'].isnull().sum()\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['wdsp'] = data['wdsp'].bfill()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a = data['wdsp'].unique()\n",
+    "# print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     ind  rain  ind.1  temp  ind.2  wetb  dewpt  vappr  rhum  \\\n",
+      "date                                                                           \n",
+      "1956-09-16 15:00:00    0   0.0      0  14.4      0  12.1   10.0   12.4    76   \n",
+      "1956-09-16 16:00:00    0   0.0      0  13.9      0  11.6    9.4   11.9    75   \n",
+      "1956-09-16 17:00:00    0   0.0      0  14.2      0  12.0   10.0   12.3    76   \n",
+      "1956-09-16 18:00:00    0   0.0      0  13.0      0  11.6   10.0   12.6    85   \n",
+      "1956-09-16 19:00:00    0   0.0      0  12.6      0  11.7   11.1   13.1    90   \n",
+      "\n",
+      "                        msl  ...  w  sun    vis clht clamt month  season  \\\n",
+      "date                         ...                                           \n",
+      "1956-09-16 15:00:00  1026.7  ...  2  0.1  16000  200     5   Sep  Autumn   \n",
+      "1956-09-16 16:00:00  1026.6  ...  1  0.1  24000  999     4   Sep  Autumn   \n",
+      "1956-09-16 17:00:00  1026.4  ...  1  0.4  19000   90     5   Sep  Autumn   \n",
+      "1956-09-16 18:00:00  1026.5  ...  1  0.0  30000   45     4   Sep  Autumn   \n",
+      "1956-09-16 19:00:00  1026.8  ...  2  0.0  28000   40     7   Sep  Autumn   \n",
+      "\n",
+      "                     year decade power  \n",
+      "date                                    \n",
+      "1956-09-16 15:00:00  1956  1950s   0.0  \n",
+      "1956-09-16 16:00:00  1956  1950s   0.0  \n",
+      "1956-09-16 17:00:00  1956  1950s   0.0  \n",
+      "1956-09-16 18:00:00  1956  1950s   0.0  \n",
+      "1956-09-16 19:00:00  1956  1950s   0.0  \n",
+      "\n",
+      "[5 rows x 25 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data['power'] = pf.calculate_power(data['wdsp'].astype(int))\n",
+    "print(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              mean     median         std\n",
+      "season                                   \n",
+      "Autumn  143.259231  57.640022  229.876901\n",
+      "Spring  125.841409  57.640022  196.443698\n",
+      "Summer   85.520088  44.397494  125.287603\n",
+      "Winter  198.113104  91.530221  316.164120\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = data.groupby('season')['power'].agg(['mean','median','std'])\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Final exported dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,12 +521,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# data_condensed['year'] = data_condensed.index.year.astype('str')\n",
     "# print(data_condensed.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **References**\n",
+    "[Murphy et al., 2023](https://www.sciencedirect.com/science/article/pii/S2212094723000610)"
    ]
   }
  ],
