Finish ARIMA model

--- a/project/research.ipynb
+++ b/project/research.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -52,14 +52,15 @@
     "path = 'data\\\\hly2375.csv'\n",
     "data = pd.read_csv(path, skiprows=22, low_memory=False)\n",
     "\n",
-    "#data = data_.sample(n=25000, random_state=42)\n",
+    "# sample the data to make it easier to work with for testing operations \n",
+    "# data = data_.sample(n=25000, random_state=42) )\n",
     "print(data.shape)\n",
     "print(data.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -96,8 +97,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lots of these datatypes will be need to be converted. On inspection both `w` and `ww` will not be kept as are categorical columns and there is enough data within the other integer columns and float type columns. A recap of the columns are shown below;\n",
+    "\n",
+    "The columns of data are (retrieved from `data/KeyHourly.txt`);\n",
+    "\n",
+    "| ID                      | ELEMENT          |   UNIT            \n",
+    "| :-------- | :-------: | -------: |\n",
+    "| rain  | Precipitation Amount    |       mm           |\n",
+    "|temp    |   \tAir Temperature \t |                           °C |\n",
+    "|wetb\t|\tWet Bulb Air Temperature\t|\t\t            °C|\n",
+    "|dewpt\t|\tDew Point Air Temperature\t|\t\t°C\t|\t                 \n",
+    "|vappr\t|\tVapour Pressure\t\t\t\t|\t\t\t        hpa |\n",
+    "|rhum\t|\tRelative Humidity\t\t\t|\t\t\t        % |\n",
+    "|msl\t|\t    Mean Sea Level Pressure\t|\t\t\t\t\t    hPa |\n",
+    "|wdsp\t|\tMean Hourly Wind Speed\t\t|\t\t\t\t    kt |\n",
+    "|wddir\t|\tPredominant Hourly wind Direction\t\t|\t\tdeg |\n",
+    "|ww\t\t  |  Synop Code Present Weather - decode below | decode below |\n",
+    "|w\t\t |   Synop Code Past Weather - decode below    | decode below |\n",
+    "|sun\t|\t    Sunshine duration\t\t\t\t\t\t|        hours |\n",
+    "|vis\t|\t    Visibility\t\t\t\t\t\t\t     |       m |\n",
+    "|clht\t|\tCloud Ceiling Height - if none value is 999\t|\t100s feet |\n",
+    "|clamt\t|\tCloud Amount\t\t\t\t\t\t\t     |   okta |\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
