Running Jupyter Notebooks to ensure no errors and updaing whitespace info in README.md

--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,12 +620,14 @@
     "\n",
     "Before they were deleted, a subsampe of mean monthly temperature (and rain) to be used later for comparing to forecasting methods in the time series analysis section (see Section 8). It is subsampled now as after August 2012 will be removed. Then only from 2012-09-30 to 2012-08-31 will be kept (the date range of the forecast method - 3 years). \n",
     "\n",
-    "**Note:** `temp` is one of the few variables that do not have the whitespace issue, hence why it is sampled now, before the data after Aug 2012 being removed. "
+    "**Note:** `temp` is one of the few variables that do not have the whitespace issue, hence why it is sampled now, before the data after Aug 2012 being removed. \n",
+    "\n",
+    "**Important Note:** It was found after the project was mostly finished that the reasons for this whitespace from 2012 onwards at this weather station was that it was converted to an AWS in 2012 (automatic weather station) and these categorical features (including `ww` and `w`) contained whitespace as not measured. This dataset contains a mix of manual (pre July 2012) and automatic (post Aug 2012) recording hence why whitespace recorded for these now non-measured features. On reflection, it may have being better to drop these features (including `ww` an `w`) since they were not used and used the full numerical dataset, especially for the ARIMA modelling. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1089,7 @@
        "[489845 rows x 22 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1379,7 @@
        "max       300.000000       8.000000    2012.000000  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1610,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1634,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1705,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1728,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1786,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1804,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1846,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1902,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1947,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1956,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1980,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2012,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2058,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2099,7 +2101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2134,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2191,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2245,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2319,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2342,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2382,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2415,7 +2417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2434,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2467,7 +2469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2549,7 +2551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2558,7 +2560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2584,7 +2586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2593,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2603,7 +2605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2634,7 +2636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2643,7 +2645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2674,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -2751,7 +2753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2760,7 +2762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2785,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2812,7 +2814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -2836,7 +2838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -2844,27 +2846,27 @@
      "output_type": "stream",
      "text": [
       "Performing stepwise search to minimize aic\n",
-      " ARIMA(2,0,2)(0,0,0)[0]             : AIC=2672.574, Time=0.26 sec\n",
-      " ARIMA(0,0,0)(0,0,0)[0]             : AIC=5082.979, Time=0.06 sec\n",
-      " ARIMA(1,0,0)(0,0,0)[0]             : AIC=2851.915, Time=0.11 sec\n",
-      " ARIMA(0,0,1)(0,0,0)[0]             : AIC=4296.433, Time=0.09 sec\n",
-      " ARIMA(1,0,2)(0,0,0)[0]             : AIC=2714.531, Time=0.15 sec\n",
-      " ARIMA(2,0,1)(0,0,0)[0]             : AIC=2737.353, Time=0.20 sec\n",
-      " ARIMA(3,0,2)(0,0,0)[0]             : AIC=2221.165, Time=0.70 sec\n",
-      " ARIMA(3,0,1)(0,0,0)[0]             : AIC=2717.968, Time=0.24 sec\n",
-      " ARIMA(4,0,2)(0,0,0)[0]             : AIC=2115.583, Time=0.93 sec\n",
-      " ARIMA(4,0,1)(0,0,0)[0]             : AIC=inf, Time=0.86 sec\n",
-      " ARIMA(5,0,2)(0,0,0)[0]             : AIC=inf, Time=1.06 sec\n",
-      " ARIMA(4,0,3)(0,0,0)[0]             : AIC=inf, Time=1.18 sec\n",
-      " ARIMA(3,0,3)(0,0,0)[0]             : AIC=2045.598, Time=0.92 sec\n",
-      " ARIMA(2,0,3)(0,0,0)[0]             : AIC=2655.256, Time=0.45 sec\n",
-      " ARIMA(3,0,4)(0,0,0)[0]             : AIC=2647.492, Time=0.92 sec\n",
-      " ARIMA(2,0,4)(0,0,0)[0]             : AIC=inf, Time=0.85 sec\n",
-      " ARIMA(4,0,4)(0,0,0)[0]             : AIC=inf, Time=1.18 sec\n",
-      " ARIMA(3,0,3)(0,0,0)[0] intercept   : AIC=2067.423, Time=1.21 sec\n",
+      " ARIMA(2,0,2)(0,0,0)[0]             : AIC=2672.574, Time=0.47 sec\n",
+      " ARIMA(0,0,0)(0,0,0)[0]             : AIC=5082.979, Time=0.07 sec\n",
+      " ARIMA(1,0,0)(0,0,0)[0]             : AIC=2851.915, Time=0.15 sec\n",
+      " ARIMA(0,0,1)(0,0,0)[0]             : AIC=4296.433, Time=0.15 sec\n",
+      " ARIMA(1,0,2)(0,0,0)[0]             : AIC=2714.531, Time=0.37 sec\n",
+      " ARIMA(2,0,1)(0,0,0)[0]             : AIC=2737.353, Time=0.41 sec\n",
+      " ARIMA(3,0,2)(0,0,0)[0]             : AIC=2221.165, Time=1.30 sec\n",
+      " ARIMA(3,0,1)(0,0,0)[0]             : AIC=2717.968, Time=0.51 sec\n",
+      " ARIMA(4,0,2)(0,0,0)[0]             : AIC=2115.583, Time=1.38 sec\n",
+      " ARIMA(4,0,1)(0,0,0)[0]             : AIC=inf, Time=1.33 sec\n",
+      " ARIMA(5,0,2)(0,0,0)[0]             : AIC=inf, Time=1.72 sec\n",
+      " ARIMA(4,0,3)(0,0,0)[0]             : AIC=inf, Time=1.76 sec\n",
+      " ARIMA(3,0,3)(0,0,0)[0]             : AIC=2045.598, Time=1.01 sec\n",
+      " ARIMA(2,0,3)(0,0,0)[0]             : AIC=2655.256, Time=0.68 sec\n",
+      " ARIMA(3,0,4)(0,0,0)[0]             : AIC=2647.492, Time=1.51 sec\n",
+      " ARIMA(2,0,4)(0,0,0)[0]             : AIC=inf, Time=1.72 sec\n",
+      " ARIMA(4,0,4)(0,0,0)[0]             : AIC=inf, Time=3.17 sec\n",
+      " ARIMA(3,0,3)(0,0,0)[0] intercept   : AIC=2067.423, Time=1.37 sec\n",
       "\n",
       "Best model:  ARIMA(3,0,3)(0,0,0)[0]          \n",
-      "Total fit time: 11.382 seconds\n"
+      "Total fit time: 19.093 seconds\n"
      ]
     }
    ],
@@ -2881,7 +2883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2935,7 +2937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -3021,7 +3023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -3110,7 +3112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
